--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "fetch": "^1.1.0",
     "history": "^5.0.0",
     "hoist-non-react-statics": "^3.3.2",
     "lodash.debounce": "^4.0.8",
+    "node": "^15.4.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
